<resources>
    <string name="app_name">MVHS App</string>
    <string name="logo">Logo</string>

    <string name="mvhs_site">MVHS Website</string>
    <string name="schedule_and_calendar">Schedule &amp; Calendar</string>
    <string name="aeries">Aeries SIS</string>
    <string name="map">School Map</string>
    <string name="calendar">Device Calendar</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="google_classroom">Google Classroom</string>
    <string name="feedback">Feedback/Bugs</string>

    <string-array name="nav_drawer_items">
        <item>@string/schedule_and_calendar</item>
        <item>@string/aeries</item>
        <item>@string/map</item>
        <item>@string/calendar</item>
        <item>@string/mvhs_site</item>
        <item>@string/google_classroom</item>
        <item>SEPARATOR</item>
        <item>@string/settings</item>
        <item>@string/changelog</item>
        <item>@string/feedback</item>
        <item>@string/about</item>
    </string-array>

    <string name="nav_drawer_toolbar_prefix">"MVHS - "</string>

    <string name="permission_needed">Permission Needed</string>
    <string name="permission_needed_desc">Permission to access your phone\'s location is needed for certain map features.</string>
    <string name="permission_denied_desc">Permission to access your phone\'s location is needed for certain map features, which will now be disabled.</string>

    <string name="proceed">To proceed, press yellow circle with arrow.</string>
    <string name="path_to">Path from %1$s to %2$s</string>
    <string name="total">Total: %1$.0f feet, about %2$.1f minutes</string>
    <string name="north">Go north</string>
    <string name="east">Go east</string>
    <string name="south">Go south</string>
    <string name="west">Go west</string>
    <string name="forward">Go forward</string>
    <string name="right">Turn right</string>
    <string name="around">Turn around</string>
    <string name="left">Turn left</string>
    <string name="arrived_at">"Arrived at "</string>
    <string name="not_on_campus">You are not on campus. Please select a starting point other than your location.</string>
    <string name="your_location">Your location</string>
    <string name="change_starting_point">Press to change starting point</string>
    <string name="choose_destination_below">Choose destination below</string>
    <string name="list">List</string>
    <string name="list_of_classrooms">List of classrooms and locations</string>



    <string name="credentials_saved">Credentials saved</string>
    <string name="save_failed">Save failed</string>
    <string name="aeries_logo">Aeries Logo</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="loading">Loading…</string>
    <string name="retrieving_credentials">Retrieving Smart Lock Credentials…</string>
    <string name="saving_credentials">Saving Smart Lock Credentials…</string>
    <string name="error">Error</string>
    <string name="incorrect_login">The username or password entered is incorrect.</string>
    <string name="room">Room</string>
    <string name="subject">Subject</string>
    <string name="save_setup">Save Setup</string>
    <string name="enter_schedule_warning">Please enter your schedule details.</string>
    <string name="schedule_setup">Schedule Setup</string>
    <string name="pref_open_schedule_setup_title">Change Schedule Setup</string>
    <string name="icon">icon</string>
    <string name="email_issues_suggestions">Email Suggestions/Issues:</string>

    <string-array name="modes">
        <item>@string/student</item>
        <item>@string/guest</item>
    </string-array>
    <string name="student">Student</string>
    <string name="guest">Guest</string>
    <string name="student_guest_question">Are you a student or guest?</string>

    <string name="changelog">Changelog</string>

    <string name="mode">Mode</string>
    <string name="website">Website</string>
    <string name="period">Period</string>
    <string name="time">Time</string>
    <string name="gym">Gym</string>
    <string name="rally_blank">Rally %s</string>
    <string name="bell_schedule">Bell Schedule</string>
    <string name="school_events">School Events</string>
    <string name="bell_schedule_no_school">Bell Schedule: No School</string>
    <string name="no_school_events">School Events: None</string>
    <string name="schedule_calendar_disclaimer">Disclaimer: The above information may not be fully accurate or finalized due to various unforeseen reasons.  It is important to double check with the school website for the <a href="https://calendar.google.com/calendar/embed?src=mvla.net_3236303434383738363838%40resource.calendar.google.com&amp;ctz=America/Los_Angeles">official school calendar</a> and bell schedule.</string>

    <string name="send_bug">Send Bug</string>
    <string name="feedback_type">Feedback Type</string>
    <string name="bug_report">Bug Report</string>
    <string name="general_feedback">General Feedback</string>
    <string name="press_for_navigation">Press for navigation</string>
    <string-array name="bugs">
        <item>General Feedback/Suggestions</item>
        <item>Bug: Calendar/Bell Schedule</item>
        <item>Bug: School Map</item>
        <item>Bug: Aeries Sign-in</item>
    </string-array>

</resources>
