<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/group1"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_sched"
            android:icon="@drawable/ic_view_agenda_black_24dp"
            android:title="@string/schedule_and_calendar" />

        <item
            android:id="@+id/nav_aeries"
            android:icon="@drawable/ic_grade_black_24dp"
            android:title="@string/aeries" />

        <item
            android:id="@+id/nav_map"
            android:icon="@drawable/ic_map_black_24dp"
            android:title="@string/map" />

        <item
            android:id="@+id/nav_cal"
            android:icon="@drawable/ic_event_24dp"
            android:title="@string/calendar" />

        <item
            android:id="@+id/nav_site"
            android:icon="@drawable/ic_web_black_24dp"
            android:title="@string/mvhs_site" />

        <item
            android:id="@+id/nav_classroom"
            android:icon="@drawable/ic_classroom_black_24dp"
            android:title="@string/google_classroom" />

    </group>

    <group
        android:id="@+id/group2"
        android:checkableBehavior="none">
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/settings" />

        <item
            android:id="@+id/nav_changelog"
            android:icon="@drawable/ic_trending_up_24dp"
            android:title="@string/changelog" />

        <item
            android:id="@+id/nav_feedback"
            android:icon="@drawable/ic_feedback_black_24dp"
            android:title="@string/feedback" />

        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_info_black_24dp"
            android:title="@string/about" />
    </group>

</menu>