<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        android:padding="16dp"
        android:text="@string/app_name"
        android:textAppearance="@style/TextAppearance.AppCompat.Display3" />

    <ImageView
        android:layout_width="128dp"
        android:layout_height="256dp"
        android:layout_centerInParent="true"
        android:contentDescription="@string/icon"
        android:src="@drawable/ic_launcher512" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/activity_welcome_buttonbar"
        android:layout_centerHorizontal="true"
        android:text="@string/student_guest_question"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

    <LinearLayout
        android:id="@id/activity_welcome_buttonbar"
        style="?buttonBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="16dp"
        android:orientation="horizontal">

        <Space
            android:layout_width="16dp"
            android:layout_height="match_parent" />

        <Button
            android:id="@id/activity_welcome_teacher"
            style="?buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/teacher"
            android:textSize="16sp" />

        <Button
            android:id="@id/activity_welcome_student"
            style="?buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/student"
            android:textSize="16sp" />

        <Button
            android:id="@id/activity_welcome_guest"
            style="?buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/guest"
            android:textSize="16sp" />

        <Space
            android:layout_width="16dp"
            android:layout_height="match_parent" />

    </LinearLayout>

</RelativeLayout>